# homecloud

./: .envrc  .gitignore  .pre-commit-config.yaml  Jenkinsfile  Makefile  README.md  flake.nix  tmp.yml
cli/: main.py  pyproject.toml
cli/hs_cli/: settings.py  util.py
cli/hs_cli/commands/: __init__.py  ci.py  config.py  fluxcd.py  kubeseal.py
cli/scripts/: install.sh  uninstall.sh
docker/cheater/: Dockerfile  README.md  index.ts  package.json
docker/rustdesk/: docker-compose.yml
docker/traefik/: docker-compose.yml  setup.sh
docker/traefik/config/: traefik.yml
docker/traefik/config/dynamic/: 00-vpn.yml  01-k3s.yml  02-rustdesk.yml
docker/vault/: docker-compose.yml
docker/vault/config/: vault.hcl
docker/vpn/: .gitignore  docker-compose.yml  router-entrypoint.sh  router.Dockerfile
docker/vpn/custom-cont-init.d/: 99-setup-dns
docker/watchtower/: docker-compose.yml
docker/webdav-mounter/: Dockerfile  entrypoint.sh  webdav_mount.py
docker/wg-easy/: .env.example  docker-compose.yml  entrypoint.sh
docker/wg-easy/dns_masq/: 00-internal.conf
k8s/: kustomization.yaml  namespace.yaml  secrets_cert.pem
k8s/base/: ingress-config.yml  kustomization.yaml
k8s/base/image/: secret.yaml
k8s/base/ingress/: cert.yml  config.yml  dashboard.yml  kustomization.yml  secret.yml
k8s/base/secrets/: store.yaml
k8s/base/services/cheater/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pullsecrets.yaml  secret.yaml  service.yaml
k8s/flux-system/: gotk-sync.yaml
k8s/helm/: kustomization.yaml  repositories.yaml
(+224 files in other folders)
