[tool.poetry]
name = "homeserver-cli"
version = "0.1.0"
description = ""
authors = ["Nico Krätschmer <kraetschmerni@gmail.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.2"
docker = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
